<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controller.MainActivity"
    android:id="@+id/parent_relative_layout"
    android:background="@color/colorHappy">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/my_mood"
        android:layout_centerInParent="true"
        android:contentDescription="@string/mood_of_the_user"
        android:src="@drawable/smiley_happy" />
    <ImageButton
        android:id="@+id/btn_add_comment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_margin="16dp"
        android:background="@null"
        android:contentDescription="@string/add_comment_button"
        android:src="@drawable/ic_note_add_black"
        />

    <ImageButton
        android:id="@+id/btn_mood_history"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="329dp"
        android:layout_marginLeft="329dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="8dp"
        android:background="@null"
        android:contentDescription="@string/mood_history_button"
        android:src="@drawable/ic_history_black" />

    <ImageButton
        android:id="@+id/btn_share"
        android:layout_width="43dp"
        android:layout_height="39dp"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="16dp"
        android:layout_alignParentRight="true"
        android:layout_marginRight="5dp"
        android:background="@null"
        android:src="@drawable/ic_mobile_screen_share"

        />
</RelativeLayout>