<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controller.MoodHistoryActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/reycler_moods"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:listItem="@layout/item_mood" />
</RelativeLayout>